--- a/css/app.css
+++ b/css/app.css
@@ -88,6 +88,22 @@ th.columns.last {
 th.columns table:not(.button) {
   width: 100%; }
 
+th.large-2 {
+  width: 84px;
+  padding-left: 8px;
+  padding-right: 8px; }
+
+th.large-2.first {
+  padding-left: 16px; }
+
+th.large-5 {
+  width: 234px;
+  padding-left: 8px;
+  padding-right: 8px; }
+
+th.large-5.first {
+  padding-left: 16px; }
+
 th.large-6 {
   width: 284px;
   padding-left: 8px;
@@ -97,6 +113,22 @@ th.large-6.first {
   padding-left: 16px; }
 
 th.large-6.last {
+  padding-right: 16px; }
+
+th.large-7 {
+  width: 334px;
+  padding-left: 8px;
+  padding-right: 8px; }
+
+th.large-7.last {
+  padding-right: 16px; }
+
+th.large-10 {
+  width: 484px;
+  padding-left: 8px;
+  padding-right: 8px; }
+
+th.large-10.last {
   padding-right: 16px; }
 
 th.large-12 {
@@ -110,18 +142,10 @@ th.large-12.first {
 th.large-12.last {
   padding-right: 16px; }
 
-.collapse > tbody > tr > th.large-12 {
-  padding-right: 0;
-  padding-left: 0;
-  width: 600px; }
-
-.collapse th.large-12.first,
-.collapse th.large-12.last {
-  width: 608px; }
-
 th.large-12 center {
   min-width: 552px; }
 
+td.expander,
 th.expander {
   visibility: hidden;
   width: 0;
@@ -130,14 +154,15 @@ th.expander {
 p.text-center {
   text-align: center; }
 
-p.text-right {
-  text-align: right; }
+@media only screen and (max-width: 616px) {
+  .small-float-center {
+    margin: 0 auto !important;
+    float: none !important;
+    text-align: center !important; } }
 
-img.float-center {
-  margin: 0 auto;
-  Margin: 0 auto;
-  float: none;
-  text-align: center; }
+img.float-right {
+  float: right;
+  text-align: right; }
 
 table.float-center {
   margin: 0 auto;
@@ -153,7 +178,7 @@ td,
 th,
 a {
   color: #0a0a0a;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: sans-serif;
   font-weight: normal;
   padding: 0;
   margin: 0;
@@ -164,7 +189,7 @@ a {
 h1 {
   color: inherit;
   word-wrap: normal;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: sans-serif;
   font-weight: normal;
   margin-bottom: 10px;
   Margin-bottom: 10px; }
@@ -185,14 +210,14 @@ p {
   Margin-bottom: 16px; }
 
 a {
-  color: #005587;
+  color: #ffbf3d;
   text-decoration: none; }
   a:hover {
-    color: #003554; }
+    color: #ffae0a; }
   a:active {
-    color: #003554; }
+    color: #ffae0a; }
   a:visited {
-    color: #005587; }
+    color: #ffbf3d; }
 
 span.invisible-previewline {
   display: none !important;
@@ -213,17 +238,17 @@ table.button {
   table.button table td {
     text-align: left;
     color: #fefefe;
-    background: #005587;
-    border: 2px solid #005587; }
+    background: #ffbf3d;
+    border: 0; }
     table.button table td a {
-      font-family: Helvetica, Arial, sans-serif;
+      font-family: sans-serif;
       font-size: 16px;
       font-weight: bold;
       color: #fefefe;
       text-decoration: none;
       display: inline-block;
       padding: 8px 16px 8px 16px;
-      border: 0 solid #005587;
+      border: 0 solid #ffbf3d;
       border-radius: 3px; }
   table.button.radius table td {
     border-radius: 3px;
@@ -234,16 +259,28 @@ table.button:active table tr td a,
 table.button table tr td a:visited {
   color: #fefefe; }
 
+table.button.expanded {
+  width: 100% !important; }
+  table.button.expanded table {
+    width: 100%; }
+    table.button.expanded table a {
+      text-align: center;
+      width: 100%;
+      padding-left: 0;
+      padding-right: 0; }
+  table.button.expanded center {
+    min-width: 0; }
+
 table.button:hover table td,
 table.button:visited table td,
 table.button:active table td {
-  background: #003554;
+  background: #ffae0a;
   color: #fefefe; }
 
 table.button:hover table a,
 table.button:visited table a,
 table.button:active table a {
-  border: 0 solid #003554; }
+  border: 0 solid #ffae0a; }
 
 @media only screen and (max-width: 616px) {
   table.body img {
@@ -260,12 +297,61 @@ table.button:active table a {
     box-sizing: border-box;
     padding-left: 16px !important;
     padding-right: 16px !important; }
-  table.body .collapse .columns {
-    padding-left: 0 !important;
-    padding-right: 0 !important; }
   th.small-12 {
     display: inline-block !important;
     width: 100% !important; } }
+
+.light-blue-full-width h1,
+.light-blue-full-width p {
+  color: #ffffff; }
+
+h1 {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 28px; }
+
+.light-blue-full-width {
+  background: #009bdf; }
+
+.footer {
+  background: #4a4f55; }
+
+.footer p {
+  color: #ffffff;
+  font-size: 10px; }
+
+.footer a {
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: normal; }
+
+.footer a:hover {
+  color: #ffffff; }
+
+.unsubscribe {
+  background: #f3f3f3; }
+
+.unsubscribe p {
+  font-size: 10px; }
+
+.unsubscribe a {
+  color: #000000;
+  font-weight: normal; }
+
+.unsubscribe a:hover {
+  color: #000000; }
+
+.social-media {
+  background: #f3f3f3; }
+
+.social-media img {
+  display: inline;
+  width: 32px;
+  height: 32px;
+  margin: 0 2px; }
+
+.vsl-logo {
+  max-width: 300px; }
 
 p.view-online {
   background: #f3f3f3;
@@ -285,7 +371,9 @@ td {
   -webkit-hyphens: none;
   -ms-hyphens: none; }
 
-a, a:visited, a:hover {
+a,
+a:visited,
+a:hover {
   text-decoration: underline;
   font-weight: normal;
   color: #005587; }
@@ -294,67 +382,38 @@ table.button table td a {
   letter-spacing: 1px;
   text-align: center; }
 
-.footer {
-  background: #4a4f55; }
-
-.footer p {
-  color: #ffffff;
-  font-size: 10px; }
-
-.footer a {
-  color: #ffffff;
-  text-decoration: none;
-  font-weight: normal; }
-
-.unsubscribe {
-  background: #f3f3f3; }
-
-.unsubscribe p {
-  font-size: 10px; }
-
-.unsubscribe a {
-  color: #000000;
-  font-weight: normal; }
-
-.social-media {
-  background: #f3f3f3; }
-
-.social-media img {
-  display: inline;
-  width: 32px;
-  height: 32px;
-  margin: 0 2px; }
-
-@media only screen and (max-width: 616px) {
-  .social-media img {
-    width: 42px !important;
-    height: 42px !important;
-    margin: 0 5px; } }
-
-.vsl-logo {
-  max-width: 300px; }
-
 table.button table td {
   text-align: center !important; }
 
 .no-bottom-padding {
   padding-bottom: 0 !important; }
 
-.headline {
-  background: #ffbf3d; }
-
-.yellow-bg {
-  background: #ffbf3d; }
-
-.headline h1 {
-  text-align: center;
-  color: #ffffff;
-  font-size: 24px;
-  margin: 0;
-  padding: 0; }
-
 sup {
   font-size: 12px;
   line-height: 12px;
   display: inline-block;
   margin-left: 3px; }
+
+.top-bar {
+  background: #005587; }
+
+.intro-cta {
+  font-size: 14px;
+  text-align: right; }
+
+table.button {
+  margin-bottom: 0px !important; }
+
+th.large-6.address-cell {
+  padding-left: 16px; }
+
+@media only screen and (max-width: 616px) {
+  .social-media img {
+    width: 42px !important;
+    height: 42px !important;
+    margin: 0 5px; }
+  .intro-cta {
+    font-size: 1em;
+    text-align: center; }
+  .footer p {
+    text-align: center; } }
